data/derived/fa15/progs/unify/prog0669.ml.out
Characters 18-19:
  let _ = List.mem( 4 test);;
                    ^
Error: This expression has type int
       This is not a function; it cannot be applied.
